dark mode fix

--- a/docs/stylesheets/index.css
+++ b/docs/stylesheets/index.css
@@ -104,7 +104,7 @@ input, button, a.button {
 }
 button, a.button {
   border-radius: 0.3em;
-  background-color: #eee;
+  background-color: var(--secondary-background-color);
 }
 a {
   text-decoration: none;
@@ -128,7 +128,7 @@ form#answer.hidden {
   height: 100vh;
   width: 100vw;
   overflow-y: hidden;
-  background-color: white;
+  background-color: var(--background-color);
 }
 #x-snap > div {
   /* height: 100vh; */
